--- a/poll_prediction.Rmd
+++ b/poll_prediction.Rmd
@@ -406,16 +406,28 @@ y_axis_range <- c(30, 70)
 
 # Plot with the filtered data and adjusted y-axis range
 ggplot() +
-  geom_line(data = combined_data, aes(x = Day, y = Dem), color = "#3f8fc4", alpha = 0.5) +
-  geom_point(data = df_filtered, aes(x = Day, y = Dem), color = "#3f8fc4", alpha = 0.1) +
-  geom_line(data = future_days, aes(x = Day, y = Dem), color = "#08306b", linetype = "dashed") +
+  geom_line(data = combined_data, aes(x = Day, y = Dem), color = "#3f8fc4", size = 0.8) +
+  geom_point(data = df_filtered, aes(x = Day, y = Dem), color = "#3f8fc4", alpha = 0.6, size = 1.5) +
+  geom_line(data = future_days, aes(x = Day, y = Dem), color = "#08306b", linetype = "dashed", size = 0.8) +
   geom_ribbon(data = future_days, aes(x = Day, ymin = lower, ymax = upper), 
               fill = "#08306b", alpha = 0.2) +
   geom_hline(yintercept = 55.4, color = "black", linetype = "solid", size = 0.5) +
   theme_minimal() +
-  labs(title = "Democrat Support Over Time with Forecast",
-       x = "Day",
-       y = "Democrat Support") +
+  labs(
+    title = "Forecast of Democrat Support Over Time",
+    subtitle = "With 95% Confidence Intervals",
+    x = "Day",
+    y = "Democrat Support (%)",
+  ) +
+  theme(
+    plot.title = element_text(size = 16, face = "bold", hjust = 0.5),
+    plot.subtitle = element_text(size = 12, hjust = 0.5),
+    axis.title.x = element_text(size = 12, face = "bold"),
+    axis.title.y = element_text(size = 12, face = "bold"),
+    axis.text = element_text(size = 10),
+    panel.grid.major = element_line(size = 0.5, linetype = 'solid', colour = "gray80"),
+    panel.grid.minor = element_line(size = 0.25, linetype = 'solid', colour = "gray90")
+  ) +
   scale_y_continuous(limits = y_axis_range)  # Set y-axis limits
 ```
 
